--- a/package.json
+++ b/package.json
@@ -14,10 +14,16 @@
     "typescript": "^5.5.2"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/express-jwt": "^7.4.2",
+    "@types/jsonwebtoken": "^9.0.6",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-graphql": "^0.12.0",
+    "express-jwt": "^7.7.8",
     "graphql": "^16.9.0",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "sqlite3": "^5.1.7",
     "uuid": "^10.0.0"
