--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.19.2",
     "express-graphql": "^0.12.0",
     "express-jwt": "^7.7.8",
+    "express-unless": "^2.1.3",
     "graphql": "^16.9.0",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
